test/deca/context/invalid/3_8_field_init4.deca
// Description:
//    field intialization false
//
// Resultats:
//    Ligne 8

class A {
   int a = 2/3;
}
